nao ta indoagora

--- a/push-notifier/src/app/app.component.html
+++ b/push-notifier/src/app/app.component.html
@@ -8,7 +8,8 @@
   background-size: 80px, 100px;" (click)="clicado()" ></button>
 </div>
 
-
+<button routerLink="inicio" 
+routerLinkActive="ativo">click-me</button>
 <router-outlet></router-outlet>
 
 
@@ -18,7 +19,7 @@
 
   onclick="myFunction()" 
 
-  
+
 <script>
 
 function myFunction() {
