--- a/push-notifier/src/app/app.component.html
+++ b/push-notifier/src/app/app.component.html
@@ -1,19 +1,25 @@
 
-<h1>SEU APP</h1>
+<div class="tela">
 
-<H2>PUSH-NOTIFICATIONS PERSONALIZADAS</H2>
+  <div class="telaMobile">
+    
+    <p style="color: darkgreen; font-size: 28px; width: 100%; white-space: nowrap; overflow-wrap: break-word;">PIANTE MODAS APP</p>
 
-<div class="corpo">
-  <button class="logo" style=" background: url('./assets/icons/Piante.jpeg') no-repeat;
-  background-size: 80px, 100px;" (click)="clicado()" ></button>
+
+    <H2>PUSH-NOTIFICATIONS PERSONALIZADAS</H2>
+
+    <div class="corpo">
+      <button class="logo" style=" background: url('./assets/icons/Piante.jpeg') no-repeat;
+      background-size: 80px, 100px;" (click)="clicado()" ></button>
+    </div>
+
+    <button routerLink="inicio" 
+    routerLinkActive="ativo">click-me</button>
+    <router-outlet></router-outlet>
+
+  </div>
+
 </div>
-
-<button routerLink="inicio" 
-routerLinkActive="ativo">click-me</button>
-<router-outlet></router-outlet>
-
-
-
 
 <!--
 
