ng add angular material

--- a/push-notifier/src/app/app.component.html
+++ b/push-notifier/src/app/app.component.html
@@ -3,11 +3,15 @@
 
   <div class="telaMobile">
     
-    <p style="color: darkgreen; font-size: 28px; width: 100%; white-space: nowrap; overflow-wrap: break-word;">PIANTE MODAS APP</p>
+    <p class="titulo">PIANTE MODAS APP</p>
 
+    <a href="https://www.piante.com.br" target="_blank">
+      <button>Ver site</button>
+    </a>
 
-    <H2>PUSH-NOTIFICATIONS PERSONALIZADAS</H2>
-
+    
+    <button mat-raised-button>Basic</button>
+  
     <div class="corpo">
       <button class="logo" style=" background: url('./assets/icons/Piante.jpeg') no-repeat;
       background-size: 80px, 100px;" (click)="clicado()" ></button>
