--- a/push-notifier/src/app/app.component.css
+++ b/push-notifier/src/app/app.component.css
@@ -304,7 +304,7 @@ width: 100px; /* Ajuste para o tamanho desejado */
 height: 120px; /* Ajuste para o tamanho desejado */
 }
 
-.corpo{
+.corpo {
 width: auto;
 height: auto;
 display: block;
@@ -327,9 +327,16 @@ padding-left: 120px;
     
 }
 
-.tela{
+.tela {
     background-color: black;
 }
 
-
+.titulo {
+    color: darkgreen;
+    font-size: 25px;
+    width: 100%;
+    white-space: nowrap;
+    overflow-wrap: break-word;
+    text-align: center;
+}
 
