--- a/push-notifier/src/app/app.component.html
+++ b/push-notifier/src/app/app.component.html
@@ -5,13 +5,12 @@
     
     <p class="titulo">PIANTE MODAS APP</p>
 
-    <a href="https://www.piante.com.br" target="_blank">
-      <button>Ver site</button>
-    </a>
-
+    <div class="botao">
+      <a  href="https://www.piante.com.br" target="_blank">
+        <button mat-raised-button>VISITAR SITE</button>
+      </a>
+    </div>
     
-    <button mat-raised-button>Basic</button>
-  
     <div class="corpo">
       <button class="logo" style=" background: url('./assets/icons/Piante.jpeg') no-repeat;
       background-size: 80px, 100px;" (click)="clicado()" ></button>
