--- a/push-notifier/src/styles.css
+++ b/push-notifier/src/styles.css
@@ -1,7 +1,12 @@
+/*
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+*/
+
 .tela{
     background-color: black;
 }
 
-
+/*
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+*/
