--- a/push-notifier/src/app/app.component.html
+++ b/push-notifier/src/app/app.component.html
@@ -21,6 +21,11 @@
 
     <div class="botao">
       <button mat-raised-button routerLink="inicio" 
+      routerLinkActive="ativo">ver inicio</button>
+    </div>
+    
+    <div class="botao">
+      <button mat-raised-button routerLink="notifications" 
       routerLinkActive="ativo">ver notificações</button>
     </div>
     
