--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -1,11 +1,1 @@
-<div class="botao">
-      <button mat-raised-button>NOTIFICAÇÃO 1</button>
-</div>
-
-<div class="botao">
-    <button mat-raised-button>NOTIFICAÇÃO 2</button>
-</div>
-
-<div class="botao">
-    <button mat-raised-button>NOTIFICAÇÃO 3</button>
-</div>
+<p>inicio aqui</p>
