--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -1,1 +1,23 @@
-<p>inicio aqui</p>
+
+<div class="botao">
+    <img src="./assets/icons/Piante.jpeg" alt="Descrição da imagem" style="height: 200px; width: 160px;">
+  </div>
+
+  <div class="botao">
+    <a  href="https://www.piante.com.br" target="_blank">
+      <button mat-raised-button>VISITAR SITE</button>
+    </a>
+  </div>
+  
+  <div class="botao">
+    <a  href="https://www.instagram.com/piante.pijamas" target="_blank">
+      <button mat-raised-button>VER INSTAGRAN</button>
+    </a>
+  </div>
+
+
+
+<div class="botao">
+    <button mat-raised-button routerLink="notifications" 
+    routerLinkActive="ativo">ver notificações</button>
+  </div>
