--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 
-<div class="botao">
+  <div class="botao">
     <img src="./assets/icons/Piante.jpeg" alt="Descrição da imagem" style="height: 200px; width: 160px;">
   </div>
 
@@ -17,7 +17,10 @@
 
 
 
-<div class="botao">
-    <button mat-raised-button routerLink="notifications" 
+  <div class="botao">
+    <button mat-raised-button routerLink="/notifications" 
     routerLinkActive="ativo">ver notificações</button>
   </div>
+
+  
+  
