--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -1,6 +1,6 @@
 
   <div class="botao">
-    <img src="./assets/icons/Piante.jpeg" alt="Descrição da imagem" style="height: 200px; width: 160px;">
+    <img src="./assets/icons/nomePiante.png" alt="Descrição da imagem" style="height: 200px; width: 160px;">
   </div>
 
   <div class="botao">
