--- a/push-notifier/src/app/notifications/notifications.component.html
+++ b/push-notifier/src/app/notifications/notifications.component.html
@@ -1,27 +1,3 @@
-<div class="botao">
-    <button mat-raised-button>NOTIFICAÇÃO 1</button>
-</div>
+<app-card></app-card>
 
-<div class="botao">
-  <button mat-raised-button>NOTIFICAÇÃO 2</button>
-</div>
-
-<div class="botao">
-  <button mat-raised-button>NOTIFICAÇÃO 3</button>
-</div>
-
-<!-- Cards with media area -->
-<div class="cardBox mat-elevation-z8" >
-    <mat-card class="example-card">
-        <mat-card-header>
-        <mat-card-title-group>
-            <mat-card-title>Shiba Inu</mat-card-title>
-            <mat-card-subtitle>Small</mat-card-subtitle>
-            <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-        </mat-card-title-group>
-        </mat-card-header>
-        <mat-card-content>
-        {{longText}}
-        </mat-card-content>
-    </mat-card>
-</div>
+<app-card></app-card>
