--- a/push-notifier/src/app/card/card.component.html
+++ b/push-notifier/src/app/card/card.component.html
@@ -14,7 +14,8 @@
             {{longText}}
             <div class="botaoNotif">
                 <a  href="https://www.piante.com.br" target="_blank">
-                <button mat-raised-button>VER NO SITE</button>
+                <button mat-raised-button style="
+                background-color: rgba(203, 162, 145, 1);">VER NO SITE</button>
                 </a>
             </div>
             </mat-card-content>
