--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -5,13 +5,15 @@
 
   <div class="botao">
     <a  href="https://www.piante.com.br" target="_blank">
-      <button mat-raised-button>VISITAR SITE</button>
+      <button mat-raised-button style="
+      background-color: rgba(203, 162, 145, 1);">VISITAR SITE</button>
     </a>
   </div>
   
   <div class="botao">
     <a  href="https://www.instagram.com/piante.pijamas" target="_blank">
-      <button mat-raised-button>VER INSTAGRAN</button>
+      <button mat-raised-button style="
+      background-color: rgba(203, 162, 145, 1);">VER INSTAGRAN</button>
     </a>
   </div>
 
@@ -19,7 +21,8 @@
 
   <div class="botao">
     <button mat-raised-button routerLink="/notifications" 
-    routerLinkActive="ativo">ver notificações</button>
+    routerLinkActive="ativo" style="
+    background-color: rgba(203, 162, 145, 1);">ver notificações</button>
   </div>
 
   
