--- a/push-notifier/src/app/app.component.css
+++ b/push-notifier/src/app/app.component.css
@@ -323,8 +323,14 @@ padding-left: 120px;
     transform: translate(-50%, -50%);
     padding: 10px;
     padding-top: 15px;
-    background-color: rgb(215, 252, 229);
+    background-color:rgba(253, 251, 251, 1);
     
 }
 
 /* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
+
+.tela{
+    background-color: black;
+    width: 100%;
+    height: 100%;
+}
