--- a/push-notifier/src/app/app.component.html
+++ b/push-notifier/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<div class="tela">
+<div class="tela" style="background-color: black;">
   <div class="telaMobile">    
     <router-outlet></router-outlet>
   </div>
