--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -4,14 +4,14 @@
   </div>
 
   <div class="botao">
-    <a  href="https://www.piante.com.br" target="_blank">
+    <a  href="https://www.piante.com.br" >
       <button mat-raised-button style="
       background-color: rgba(203, 162, 145, 1);">VISITAR SITE</button>
     </a>
   </div>
   
   <div class="botao">
-    <a  href="https://www.instagram.com/piante.pijamas" target="_blank">
+    <a  href="https://www.instagram.com/piante.pijamas" >
       <button mat-raised-button style="
       background-color: rgba(203, 162, 145, 1);">VER INSTAGRAN</button>
     </a>
