--- a/push-notifier/src/app/card/card.component.html
+++ b/push-notifier/src/app/card/card.component.html
@@ -4,16 +4,16 @@
         <mat-card class="example-card">
             <mat-card-header>
             <mat-card-title-group>
-                <mat-card-title>PIANTE MODAS</mat-card-title>
-                <mat-card-subtitle>SUPER PROMO</mat-card-subtitle>
+                <mat-card-title>CUPOM ESPECIAL</mat-card-title>
+                <mat-card-subtitle>PIANTE PIJAMAS</mat-card-subtitle>
                 <img mat-card-sm-image src="./assets/icons/IconePiante.jpeg" alt="Descrição da imagem" 
-                style="height: 70px; width: 55px;">
+                style="height: 50px; width: 40px;">
             </mat-card-title-group>
             </mat-card-header>
             <mat-card-content>
-            {{longText}}
+            {{detalhes}}
             <div class="botaoNotif">
-                <a  href="https://www.piante.com.br" target="_blank">
+                <a  href="https://www.piante.com.br" >
                 <button mat-raised-button style="
                 background-color: rgba(203, 162, 145, 1);">VER NO SITE</button>
                 </a>
