--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -6,14 +6,16 @@
   <div class="botao">
     <a  href="https://www.piante.com.br" >
       <button mat-raised-button style="
-      background-color: rgba(203, 162, 145, 1);">VISITAR SITE</button>
+      background-color: rgba(203, 162, 145, 1);
+    width: 200px;">VISITAR SITE</button>
     </a>
   </div>
   
   <div class="botao">
     <a  href="https://www.instagram.com/piante.pijamas" >
       <button mat-raised-button style="
-      background-color: rgba(203, 162, 145, 1);">VER INSTAGRAN</button>
+      background-color: rgba(203, 162, 145, 1); 
+    width: 200px;">VER INSTAGRAN</button>
     </a>
   </div>
 
@@ -22,7 +24,8 @@
   <div class="botao">
     <button mat-raised-button routerLink="/notifications" 
     routerLinkActive="ativo" style="
-    background-color: rgba(203, 162, 145, 1);">ver notificações</button>
+    background-color: rgba(203, 162, 145, 1);
+    width: 200px;">ver notificações</button>
   </div>
 
   
