--- a/push-notifier/src/app/card/card.component.html
+++ b/push-notifier/src/app/card/card.component.html
@@ -10,7 +10,7 @@
                 style="height: 50px; width: 40px;">
             </mat-card-title-group>
             </mat-card-header>
-            <mat-card-content>
+            <mat-card-content style="margin-top: 10px;">
             {{detalhes}}
             <div class="botaoNotif">
                 <a  href="https://www.piante.com.br" >
