--- a/push-notifier/src/app/app.component.html
+++ b/push-notifier/src/app/app.component.html
@@ -1,6 +1,6 @@
 
-<div class="tela" style="background-color: black;">
-  <div class="telaMobile">    
+<div class="tela" >
+  <div class="telaMobile" >    
     <router-outlet></router-outlet>
   </div>
 </div>
