--- a/push-notifier/src/app/app.component.css
+++ b/push-notifier/src/app/app.component.css
@@ -313,6 +313,9 @@ padding-left: 120px;
 */
 
 
+
+
+
 .tela {
     background-color: black;
     width: 100%;
@@ -331,5 +334,8 @@ padding-left: 120px;
     padding: 10px;
     padding-top: 15px;
     background-color:rgba(253, 251, 251, 1);
-    
+    overflow: auto;    
+}
+.telaMobile::-webkit-scrollbar {
+    display: none;
 }
