--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -7,7 +7,7 @@
     <a  href="https://www.piante.com.br" >
       <button mat-raised-button style="
       background-color: rgba(203, 162, 145, 1);
-    width: 200px;">VISITAR SITE</button>
+    width: 200px;">PIANTE.COM</button>
     </a>
   </div>
   
@@ -15,7 +15,7 @@
     <a  href="https://www.instagram.com/piante.pijamas" >
       <button mat-raised-button style="
       background-color: rgba(203, 162, 145, 1); 
-    width: 200px;">VER INSTAGRAN</button>
+    width: 200px;">INSTAGRAM</button>
     </a>
   </div>
 
@@ -25,7 +25,7 @@
     <button mat-raised-button routerLink="/notifications" 
     routerLinkActive="ativo" style="
     background-color: rgba(203, 162, 145, 1);
-    width: 200px;">ver notificações</button>
+    width: 200px;">NOTIFICAÇÕESs</button>
   </div>
 
   
