--- a/push-notifier/src/app/card/card.component.html
+++ b/push-notifier/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 
 <div style="margin-bottom: 10px;">
     <div class="cardBox mat-elevation-z8" >
-        <mat-card class="example-card">
+        <mat-card class="example-card" #card>
             <mat-card-header>
             <mat-card-title-group>
                 <mat-card-title>{{notification.cardtitulo}}</mat-card-title>
@@ -14,8 +14,8 @@
             {{notification.detalhes}}
             <div class="botaoNotif">
                 <a  href={{notification.link}} >
-                <button mat-raised-button style="
-                background-color: rgba(203, 162, 145, 1);">VER NO SITE</button>
+                    <button mat-raised-button (click)="onButtonClick()" style="
+                    background-color: rgba(203, 162, 145, 1);">VER NO SITE</button>                    
                 </a>
             </div>
             </mat-card-content>
