--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -25,7 +25,7 @@
     <button mat-raised-button routerLink="/notifications" 
     routerLinkActive="ativo" style="
     background-color: rgba(203, 162, 145, 1);
-    width: 200px;">NOTIFICAÇÕESs</button>
+    width: 200px;">NOTIFICAÇÕES</button>
   </div>
 
   
