--- a/push-notifier/src/app/card/card.component.html
+++ b/push-notifier/src/app/card/card.component.html
@@ -15,7 +15,7 @@
             <div class="botaoNotif">
                 <a  href={{notification.link}} >
                     <button mat-raised-button (click)="onButtonClick()" style="
-                    background-color: rgba(203, 162, 145, 1);">VER NO SITE</button>                    
+                    background-color: rgba(203, 162, 145, 1);" target="_blank">VER NO SITE</button>                    
                 </a>
             </div>
             </mat-card-content>
