melhorias feitas no offline

--- a/push-notifier/src/app/card/card.component.html
+++ b/push-notifier/src/app/card/card.component.html
@@ -6,7 +6,7 @@
             <mat-card-title-group>
                 <mat-card-title>{{notification.cardtitulo}}</mat-card-title>
                 <mat-card-subtitle>PIANTE PIJAMAS</mat-card-subtitle>
-                <img mat-card-sm-image src="./assets/icons/IconePiante.jpeg" alt="Descrição da imagem" 
+                <img mat-card-sm-image src="./assets/icons/logoGrande.png" alt="Descrição da imagem" 
                 style="height: 50px; width: 40px;">
             </mat-card-title-group>
             </mat-card-header>
