--- a/push-notifier/src/app/notifications/notifications.component.html
+++ b/push-notifier/src/app/notifications/notifications.component.html
@@ -1,20 +1,18 @@
-<div >
-    <div *ngIf="notificationArray" else="semNotfys">
-        <div *ngFor="let notification of notificationArray" >
-            <app-card [notification]="notification"            
-                (clicado)="clicado($event)"            
-                (visto)="visto($event)"
-            ></app-card>
-        </div>
+<div *ngIf="notificationArray.length; else semNotfys">
+    <div *ngFor="let notification of notificationArray" >
+        <app-card [notification]="notification"            
+            (clicado)="clicado($event)"            
+            (visto)="visto($event)"
+        ></app-card>
     </div>
 </div>
 
-<template #semNotfys>
+<ng-template #semNotfys>
     <div class="botao">
         <img src="./assets/icons/logoGrande.png" alt="Descrição da imagem" style="height: 300px; width: 260px;">
     </div>
     <div style="display: flex; justify-content: center; font-size: 20px; font-weight: bold;">
         <P >Novidades em breve</P>
     </div>
-</template>
+</ng-template>
 
