melhoris aplicadas, icones e indexedDb bem melhores

--- a/push-notifier/src/app/card/card.component.html
+++ b/push-notifier/src/app/card/card.component.html
@@ -6,8 +6,8 @@
             <mat-card-title-group>
                 <mat-card-title>{{notification.cardtitulo}}</mat-card-title>
                 <mat-card-subtitle>PIANTE PIJAMAS</mat-card-subtitle>
-                <img mat-card-sm-image src="./assets/icons/logoGrande.png" alt="Descrição da imagem" 
-                style="height: 50px; width: 40px;">
+                <img mat-card-sm-image src="./assets/icons/logoMini_54.png" alt="Icone da Empresa" 
+                style="height: 54px; width: 54px;">
             </mat-card-title-group>
             </mat-card-header>
             <mat-card-content style="margin-top: 10px;">
