--- a/push-notifier/src/app/inicio/inicio.component.html
+++ b/push-notifier/src/app/inicio/inicio.component.html
@@ -1,6 +1,7 @@
 
   <div class="botao">
-    <img src="./assets/icons/nomePiante_512.png" alt="Descrição da imagem" style="height: 300px; width: 260px;">
+    <img src="./assets/icons/nomePiante_512.png" alt="Descrição da imagem" 
+    style="height: 300px; width: 300px;">
   </div>
 
   <div class="botao">
