--- a/push-notifier/src/app/notifications/notifications.component.html
+++ b/push-notifier/src/app/notifications/notifications.component.html
@@ -9,7 +9,8 @@
 
 <ng-template #semNotfys>
     <div class="botao">
-        <img src="./assets/icons/logoGrande_512.png" alt="Descrição da imagem" style="height: 300px; width: 260px;">
+        <img src="./assets/icons/logoGrande_512.png" alt="Descrição da imagem" 
+        style="height: 300px; width: 300px;">
     </div>
     <div style="display: flex; justify-content: center; font-size: 20px; font-weight: bold;">
         <P >Novidades em breve</P>
